test(mcp): update assertions in AllowedIntentServiceTest and SemanticInterpretServiceTest for list access